fix brand G-Research being wrapped

--- a/src/components/IndexPage/HeroSection/HeroSection.module.css
+++ b/src/components/IndexPage/HeroSection/HeroSection.module.css
@@ -31,6 +31,10 @@
   }
 }
 
+.brand {
+  white-space: nowrap;
+}
+
 .description {
   margin-top: var(--mantine-spacing-xl);
   font-size: rem(20px);
